.gitignore/log/build_2025-12-04_13-48-58/Rover/stdout_stderr.log
running egg_info
writing ../../build/Rover/Rover.egg-info/PKG-INFO
writing dependency_links to ../../build/Rover/Rover.egg-info/dependency_links.txt
writing entry points to ../../build/Rover/Rover.egg-info/entry_points.txt
writing requirements to ../../build/Rover/Rover.egg-info/requires.txt
writing top-level names to ../../build/Rover/Rover.egg-info/top_level.txt
reading manifest file '../../build/Rover/Rover.egg-info/SOURCES.txt'
writing manifest file '../../build/Rover/Rover.egg-info/SOURCES.txt'
running build
running build_py
running install
running install_lib
byte-compiling /home/pradyun/Assignment2_ws/install/Rover/lib/python3.10/site-packages/Rover/pub1.py to pub1.cpython-310.pyc
  File "/home/pradyun/Assignment2_ws/install/Rover/lib/python3.10/site-packages/Rover/pub1.py", line 2
    from rclpy.node import Nodeimport rclpy
                                      ^^^^^
SyntaxError: invalid syntax

running install_data
copying launch/launch.py -> /home/pradyun/Assignment2_ws/install/Rover/share/Rover/launch
running install_egg_info
removing '/home/pradyun/Assignment2_ws/install/Rover/lib/python3.10/site-packages/Rover-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/Rover/Rover.egg-info to /home/pradyun/Assignment2_ws/install/Rover/lib/python3.10/site-packages/Rover-0.0.0-py3.10.egg-info
running install_scripts
Installing pub1 = Rover.pub1:mainpub2 = Rover.pub1:mainsub script to /home/pradyun/Assignment2_ws/install/Rover/lib/Rover
writing list of installed files to '/home/pradyun/Assignment2_ws/build/Rover/install.log'
